--- a/doc/manual/en/ch01_introduction.tex
+++ b/doc/manual/en/ch01_introduction.tex
@@ -42,7 +42,7 @@ icons.
 \end{figure}
 
 \warning Warning. The icon warning is used, whenever things shall be followed 
-strictly.  Not following will cause unexpected results, total disfunction, or 
+strictly.  Not following will cause unexpected results, total dysfunction, or
 even danger to life. Proceed only, if warning understood.
 
 \gesture{DU} Gesture. A swipe gesture input is available using devices with a 
@@ -55,7 +55,7 @@ in writing, a specific icon is provided, depicting the movements.
 
 \tip Reminder. This icon tags a tip, trick, things you might remind after having read corresponding sections and so on.
 
-\config{orientation} Configuration see... The icon depicting two craftman's 
+\config{orientation} Configuration see... The icon depicting two craftsman's
 tools refers to an in-depth description of items being mentioned and how to 
 configure them. The numbers beside the icon refer to a specific chapter / 
 section of this manual's reference chapters \ref{cha:infobox} and 
@@ -69,25 +69,25 @@ section of this manual's reference chapters \ref{cha:infobox} and
 this (inverted) warning as an example, you are ready to proceed.
 
 \config{usingxcsoarsafely} Referring to the second exemplary case of the icon 
-"configuration" to the left, the icon points 
+``configuration'' to the left, the icon points
 towards chapter \ref{cha:introduction}, (this chapter), section 
-\ref{sec:usingxcsoarsafely}, "Using XCSoar safely" underneath, which could be 
-understood as a "how to configure yourself". It is up to you whether to jump 
+\ref{sec:usingxcsoarsafely}, ``Using XCSoar safely'' underneath, which could be
+understood as a ``how to configure yourself''. It is up to you whether to jump
 to an in depth discussion and go back or just proceed. If reading this manual 
 electronically, clicking the number will let you jump to the requested cross
--reference.  Use the go-to "back" (or similar) function of your particular 
+-reference.  Use the go-to ``back'' (or similar) function of your particular
 browser to proceed with the chapter you jumped from.
 
-The numbers are printed in blue as are the icons introduced, signalling "help 
-available". And so are other Universal Ressource Locators, underlaying blue 
+The numbers are printed in blue as are the icons introduced, signalling ``help
+available''. And so are other Universal Resource Locators, underlying blue
 text. Clicking on text like \xcsoarwebsite{/contact} will open your world wide 
-web browser or mailer to get in touch with other ressources or konwledgeable 
+web browser or mailer to get in touch with other resources or knowledgeable
 people respectively.
 
-The remainder of this chapter "Introduction" is about getting you prepared for 
+The remainder of this chapter ``Introduction'' is about getting you prepared for
 XCSoar, how to raise your level of understanding and maintain your skills. 
-Chapter \ref{cha:quickstart} "Quickstart" might be the next waypoint after 
-\ref{cha:installation} "Installation" for the urgent user. Feel free to cut 
+Chapter \ref{cha:quickstart} ``Quickstart'' might be the next waypoint after
+\ref{cha:installation} ``Installation'' for the urgent user. Feel free to cut
 short, but do not resume too sadly when reading chapter by chapter, following:
 
 Chapter~\ref{cha:interface} introduces the user interface
@@ -125,15 +125,6 @@ process is presented in Chapter~\ref{cha:history-development}.
 
 \section{Notes}
 
-\subsection*{Terminology}
-A variety of terms may be used to describe embedded devices like the Pocket PC
-platform, including `organiser', Portable Digital Assistant (PDA)
-and Personal Navigation Assistant (PNA).  XCSoar is
-also available on Triadis Engineering's Altair glide computer, which is
-formally an Electronic Flight Instrumentation System, and several other
-platforms. Throughout this document, these terms are used interchangeably to
-refer to whatever hardware XCSoar is running on.
-
 \subsection*{Screenshots}
 Throughout this manual are several screenshots of XCSoar. These are
 taken from the program running on a variety of hardware platforms and possibly
@@ -144,27 +135,17 @@ XCSoar running in landscape orientation.
 
 \section{Platforms}
 \begin{description}
-\item[Windows Mobile PDA/PNA]
-Devices powered by Microsoft Pocket PC 2003 up to Windows Mobile 6 are
-supported by XCSoar. Windows Mobile 7 will not be supported as Microsoft decided
-to skip support for native applications from this version on.
 \item[Android Devices]
 XCSoar runs on Android 1.6 or newer.
 \item [eBookreader]
-XCSoar runs on some Kobo eReader devices. A native port has been released with version 6.7.1, but is still considered experimental (Nov. 2013).
-\item[Altair]
-The Altair glide computer by Triadis Engineering is a glide computer
-factory installed with XCSoar.  The Altair PRO version also contains
-an internal GPS.
+XCSoar runs on several Kobo eReader devices.
 \item[Windows PC]
 It is possible to run XCSoar on an ordinary computer with the Windows
-operating system. This setup can be used for training yourself in using XCSoar.
+operating system (Vista and above). This setup can be used for training yourself in using XCSoar.
 A simulation mode is included in XCSoar as well as a IGC replay function, that
 can be used when not connected to a valid GPS source.
 \item[Unix/Linux PC]
-XCSoar can be run on Unix using the Wine emulator. A native Unix port
-has been released with the 6.0 version of XCSoar, but is still
-considered experimental.
+XCSoar runs on Unix/Linux.
 \end{description}
 
 
@@ -187,8 +168,7 @@ If your concern appears not already addressed, post it or email us:
 \begin{quote}
 \href{mailto:xcsoar-user@lists.sourceforge.net}{xcsoar-user@lists.sourceforge.net}
 \end{quote}
-Any frequent questions will be added to this document and to the Frequently
-Asked Questions (FAQ) section of the XCSoar website.
+Any frequent questions will be added to this document.
 You may also find it useful to subscribe to the XCSoar users mailing
 list so you will be kept up to date with latest developments.
 
@@ -199,14 +179,14 @@ Like any complex software program, XCSoar may be subject to software
 bugs, so if you find any, please report them to the XCSoar developers
 by using our bug tracker portal at: 
 \begin{quote}
-\xcsoarwebsite{/trac}
+\xcsoarwebsite{/develop/new_ticket.html}
 \end{quote}
 or by sending an email to
 \begin{quote}
 \href{mailto:xcsoar-devel@lists.sourceforge.net}{xcsoar-devel@lists.sourceforge.net}
 \end{quote}
 XCSoar logs many valuable things in a logfile
-\verb|xcsoar.log| in the \texttt{XCSoarData} directory. The logfile can be appended to the bug ticket in order to help XCSoar developers determine the cause of possible problems. For Altair users, the logfile is transferred to the `FromAltair' directory by AltairSync if a USB drive is plugged in when Altair is first switched on.
+\verb|xcsoar.log| in the \texttt{XCSoarData} directory. The logfile can be appended to the bug ticket in order to help XCSoar developers determine the cause of possible problems.
 If you like the idea of doing some more, get involved:
 \begin{quote}
 \xcsoarwebsite{/develop}
@@ -214,7 +194,7 @@ If you like the idea of doing some more, get involved:
 
 \subsection*{Updates}
 You should periodically visit the XCSoar website to check for program
-updates. The installation procedure described above can typically be
+updates. The installation procedure in the following chapter can typically be
 repeated in order to upgrade the software.  All user configuration
 settings and data files will be preserved during the
 re-installation/upgrade.
@@ -222,15 +202,6 @@ re-installation/upgrade.
 It is also recommended to periodically check for updates to data
 files, particularly Special Use Airspace, which may be subject to
 change by the national civil aviation authority.
-
-\subsection*{Updating XCSoar on Altair}
-Updating XCSoar on Altair involves downloading the latest program file
-{\tt XCSoarAltair-YYY-CRCXX.exe}, copying it to a USB memory stick,
-then using the AltairSync utility on the Altair device to complete the
-installation.  Refer to the {\em Altair Owner's Manual} for details.
-
-Other data and program files can be transferred to Altair in a similar
-way.
 
 \section{Training}
 For the safety of yourself and others, pilots using XCSoar are advised to
@@ -254,7 +225,7 @@ test configuration settings of the variometer.
 \end{itemize}
 
 \subsection*{Using XCSoar with a flight simulator}
-A good way to learn how to use XCSoar is to connect the Pocket PC
+A good way to learn how to use XCSoar is to connect the smartphone
 device to a PC running a flight simulator that can output NMEA
 sentences to the serial port. Suitable simulators include Condor and
 X-Plane.  
