--- a/doc/manual/en/ch02_user_interface.tex
+++ b/doc/manual/en/ch02_user_interface.tex
@@ -41,17 +41,15 @@ map display. Various symbols relating to glide computer information are overlaid
 the map area. Icons and text may appear along the lower edge of the screen
 to indicate status of connected devices, flight modes etc.
 Following the development process of XCSoar there is an increasing number of 
-items that may be chosen for display in the main area, which are gauges 
-Flarm Radar, Thermal Assistant, and Horizon (as is with Version 6.7.2, 
-Dec. 2013).
+items that may be chosen for display in the main area, which are gauges,
+FLARM Radar, Thermal Assistant and Horizon.
 \item[InfoBoxes] A grid of data values is displayed usually either along
-the top and bottom of the screen (portrait display) or to the right of the
+the top and bottom of the screen (portrait display) or to the left and right of the
 screen (landscape display).  These so-called InfoBoxes display data from the
 GPS and other input devices as well as data calculated by XCSoar. Further, 
-Infoboxes can display even gauges and certain graphs.
-\item[Bottom area] At the screen's bottom, XCSoar is able to draw a cross 
-section of terrain and airspaces in direction of your heading. (There might be 
-more to come after Dec. 2013)
+InfoBoxes can even display gauges and certain graphs.
+\item[Bottom area] At the bottom of the screen, XCSoar is able to draw a cross-
+section of terrain and airspaces in the direction of your heading.
 \end{description}
 
 \subsection*{Overlays}
@@ -60,9 +58,9 @@ more to come after Dec. 2013)
 and some may only have meaningful information displayed when XCSoar is
 connected to a supported instrument.
 A gauge overlay is either permanently drawn or is invoked by several 
-conditions.  E.g. the thermal assistant is shown, when XCSoar enters circling 
-mode. The Flarm radar is invoked, whenever a probable collision is detected. 
-Permanently overlayed gauges are the final glide bar as well as the vario bar 
+conditions.  E.g.\ the thermal assistant is shown, when XCSoar enters circling
+mode. The FLARM radar is invoked, whenever a probable collision is detected.
+Permanently overlaid gauges are the final glide bar as well as the vario bar
 amongst others.
 \item[Button labels and menus] Hardware buttons on the device running XCSoar
 can be used to bring up and navigate smaller on-screen menus that are
@@ -93,7 +91,7 @@ There are several ways to interact with XCSoar:
 \begin{itemize}
 \item Touching certain map elements
 \item Touching InfoBoxes and on-screen menu buttons
-\item `Gesturing', by e.g. drawing a dash from the left to the right
+\item `Gesturing', by e.g.\ drawing a dash from the left to the right
   on the screen (see Section \ref{sec:gestures} below).
 \item `Dragging' the screen (touching the screen and moving before releasing).
 \item Pressing application buttons on the device.
@@ -106,9 +104,6 @@ of buttons.
 
 For the PC version of XCSoar, clicking the mouse over an item is equivalent to
 touching it.
-
-Since the Altair does not have a touch screen, all user interaction is performed
-via physical buttons, switches or other external interface devices if connected.
 
 \section{The main button menu}
 The button menu is a set of buttons drawn on the screen and activated by touch
@@ -126,26 +121,13 @@ stick grip switches etc. A wide variety of functions can be assigned to these
 inputs.
 \sketch{figures/buttonmenu.png}
 
-For Altair, there are four major menus, activated by pressing one of
-the vertical strip of hardware buttons on the left of the display.
-When a menu is activated, a strip of on-screen buttons appear along the 
-bottom of the display.  Pressing the particular menu button again will
-cycle through several pages of items.  Pressing the corresponding
-horizontal button will activate that item.  At the last page, pressing
-the menu button again will turn that menu off and the horizontal strip
-of on-screen buttons disappear.  
-
 On the PC version, these mode buttons are activated by the
 1, 2, 3 and 4 keys.  The 6, 7, 8, 9 and 0 keys correspond to the horizontal
 strip of buttons.
 
-On the PDA version, the mode buttons are activated by the keys to the
-side of the joystick/rocker button.
-
 If the user doesn't interact with the computer for some time, the
 menu will close automatically.  This menu time-out is configurable.
-The escape key on PC, or the PWR/ESC button on Altair, can
-also be used to close the current menu.
+The escape key on PC can also be used to close the current menu.
 
 Menu buttons appear greyed out if the corresponding function is not available. 
 For example, the ``Waypoint list'' function will appear grey if there are no waypoints loaded.
@@ -162,17 +144,6 @@ In the menu list described below, generic labels are used.
 This section describes the default layout of the menu system on all
 platforms.  The functions performed by each button are explained more
 fully in following chapters.
-
-The primary menu buttons are activated by each of the vertical strip of buttons
-on Altair, from top to bottom:
-\begin{jspecs}
-\item[\bmenug{Nav}] Actions for navigation control, primarily cross-country
-gliding tasks.
-\item[\bmenug{Display}] Actions to control the display.
-\item[\bmenug{Config}] Configuration of XCSoar, connected devices, and in-flight
-settings.
-\item[\bmenug{Info}] Activates various informational dialogue windows.
-\end{jspecs}
 
 For the PC version, the keys 1, 2, 3 and 4 activate the 
 corresponding menu.  The following menu item list has on the left side of most 
@@ -279,7 +250,7 @@ see
  & \bmenut{Logger}{Start}
  & \bmenus{Raw Logger}
  & \bmenus{Airspace}
- & \bmenus{Vega} \\
+ & \bmenus{Vega}
  & \bmenus{Profiles} \\
 see
  & \ref{sec:logger}
@@ -340,7 +311,7 @@ see
 
 The information menu is always a good address, when not only a clue on 
 how to set MacCready is requested, but rather more elaborate help on a 
-larger scope tactical decision on your flight is requested.
+larger scope tactical decision on your flight is requested. %TODO rewrite
 
 
 \subsection*{The Vega variometer sub-menu of the configuration menu}
@@ -384,25 +355,22 @@ see
 \end{tabularx}}
 
 This sub-menu unfortunately overlays the full-screen map view of the pan mode.
- It's functions are quite evident, although the menu could be replaced by multi-touch
- technology or knobs (like on Altair). Besides the essential `exit pan mode'
+ Its functions are quite evident, although the menu could be replaced by multi-touch
+ technology or knobs. Besides the essential `exit pan mode'
  function the `What's here?' button offers brilliant access to the variety of
  information of the map.
 
 \section{Default menu buttons}
 
 When no menu is active, (so-called default mode), the horizontal row
-of buttons in Altair perform the following functions (from left to right):
+of buttons perform the following functions (from left to right):
 
 \begin{center}
 \begin{tabular}{c c c c c c}
  PC: & 6 & 7 & 8 & 9 & 0 \\
- Altair: & F5 & F6 & F7 & F8 & F9 \\
 & \bmenus{Flight} & \bmenut{Task}{Manager} & {} & \bmenus{Target} & \bmenut{Drop}{Mark} \\
 \end{tabular}	
 \end{center}
-
-Pressing ESC on Altair displays labels for these default menu buttons.
 
 For all other versions in the default mode, the cursor keys perform
 the following functions:
@@ -414,33 +382,6 @@ the following functions:
 \item[Enter] Clear status message or suppress FLARM gauge if open and no warning
 active
 \end{jspecs}
-
-For the Altair version in the default mode, the rotary knob performs
-the following functions:
-\begin{jspecs}
-\item[Outer knob counter-clockwise] Zoom in
-\item[Outer knob clockwise] Zoom out
-\item[Inner knob counter-clockwise] (No function assigned)
-\item[Outer knob clockwise] (No function assigned)
-\item[Knob button press] Clear status message or acknowledge airspace warning
-\end{jspecs}
-
-In dialogue forms, the rotary knob in Altair performs the role of the cursor and
-enter keys:
-\begin{jspecs}
-\item[Outer knob counter-clockwise] Up cursor
-\item[Outer knob clockwise] Down cursor
-\item[Inner knob counter-clockwise] Left cursor
-\item[Inner knob clockwise] Right cursor
-\item[Knob button press] Enter key
-\end{jspecs}
-
-For Altair, the buttons along the edge of the display can be used as
-alternate ways of navigating in dialogues.  The F4 key (directly above
-the rotary knob) can be used as an alternate ENTER key (instead of
-pressing the rotary knob) in dialogues.  The F6 and F7 keys (directly to
-the right of the rotary knob) can be used to select the next or
-previous page in multi-page dialogues.
 
 \subsection*{Dynamic menu labels}
 Certain menu items have dynamic labels to make it clearer what happens when the
@@ -486,7 +427,7 @@ screen orientation and the device's display size.
 
 For a 320x240 display
 Pocket PC in portrait mode, there are four InfoBoxes above and four
-InfoBoxes below the map display.  
+InfoBoxes below the map display.  %TODO Update the example by considering something else than a Pocket PC
 \sketch{figures/infoboxes.png}
 
 A typical landscape layout has 9 InfoBoxes and the variometer gauge 
@@ -510,18 +451,18 @@ Further, you can use screen pages to change InfoBox content manually, by
 assigning different Infobox sets to different pages (see following section).
 
 To gain access to automatic switching InfoBoxes dependent on the flight mode, 
-just let XCSoar run with it's pre-configured setup from installation. To set up 
+just let XCSoar run with its pre-configured setup from installation. To set up 
 your personal version of Infoboxes go through the following procedure.
 \begin{description}
 \item[InfoBox geometry] Choose a basic Infobox geometry or layout.  This basic 
 layout is maintained through any changes in-flight, affecting InfoBox content 
 only.\config{interface-appearance}
-\item[Choose Infobox set "Auto"] Configure at least one screen page with the 
-choice of Infoboxes "Auto". As can be seen on the corresponding configuration 
+\item[Choose Infobox set ``Auto''] Configure at least one screen page with the
+choice of Infoboxes ``Auto''. As can be seen on the corresponding configuration
 screen, there are more screen pages pre-defined. \config{screenpages}  These 
 others are not needed to gain automatic switches by flight mode. They are for \emph{manually} turning through the screens defined by pages. 
 \item[Define InfoBox sets] Put together the Infobox content you want to be 
-displayed in three Infobox sets called "Circling", "Cruise", and "FinalGlide" 
+displayed in three Infobox sets called ``Circling'', ``Cruise'', and ``FinalGlide''
 respectively.\config{infobox_sets}
 \end{description}  
 
@@ -529,9 +470,9 @@ respectively.\config{infobox_sets}
 \subsection*{Screen pages with different InfoBox sets}\label{sec:screenpages}
 
 XCSoar allows the pilot to define various sets of InfoBoxes that are 
-appropriate for "normal" states of flight.  Assuming circling, 
+appropriate for ``normal'' states of flight.  Assuming circling,
 cruising, or final glide as normal, XCSoar can switch corresponding Infobox 
-sets automatically. Perfectly done.
+sets automatically.
 
 As you might imagine, there are countless cases, you wished you had another 
 ensemble of information displayed at once.  For all of these more or less 
@@ -541,28 +482,27 @@ introduced by the concept of screen pages, a few use cases are given.
 \label{par:use_case}
 \begin{description}
 \item[Familiarisation] Especially if you are a beginner, you might study 
-computed values in-flight in advance of placing them in your "normal" InfoBox 
+computed values in-flight in advance of placing them in your ``normal'' InfoBox
 ensemble - just to get familiar with the reading. To do so, create a new 
-Infobox named "test" to be placed on a additional screen page brought in. In 
-any case you can go back to the screen you know by "turning a page".
+Infobox named ``test'' to be placed on an additional screen page brought in. In
+any case you can go back to the screen you know by ``turning a page''
 \item[Competition] If you are a pilot scratching the edge, you might want to 
 gain benefit of XCSoar's numerous task- and competition-related computations. 
 In order to get them related to the competition's phases, you might like the 
 idea of defining two special use cases with pages for the phase before start, 
-another one for whilst racing.  If you are in search for a specific value to 
-be displayed, give it a try in chapter \ref{cha:infobox} "Infobox reference". 
+another one for whilst racing.  If you are in search of a specific value to
+be displayed, give it a try in chapter \ref{cha:infobox} ``\nameref{cha:infobox}''.
 There is a big chance you will find it.
 \item[On the ground] As a manager on duty you might use a screen page, showing 
-the "Flarm Radar" solely.  This might happen on a PC screen running XCSoar 
-being connected to a Flarm receiver.
+the ``FLARM Radar'' solely.  This might happen on a PC screen running XCSoar
+being connected to a FLARM receiver.
 \end{description}
 
 Whatever you would like to display, take into account the use case and screen 
 pages concept.
 
 \gesturespec{left}
-To go through the various screen pages, use the left/right cursor 
-keys (Altair), or gesture left/right (touch-screen), or via menu button in menu \bmenug{Display 1/2}, showing a dynamic label, changing accordingly to the screenpage's content to show up next:
+To go through the various screen pages, use gesture left/right (touch-screen), or via menu button in menu \bmenug{Display 1/2}, showing a dynamic label, changing accordingly to the screenpage's content to show up next:
 \gesturespec{right}
 
 \bmenut{Display}{1/2}\blink\bmenut{Info}{Circling}\blink\bmenut{Info}{Cruise}\blink\bmenut{Info}{FinalGlide}\blink\bmenut{Info}{...}
@@ -572,18 +512,18 @@ keys (Altair), or gesture left/right (touch-screen), or via menu button in menu 
 
 (This section applies only when a touch-screen or mouse is present.)
 
-Some InfoBox values can be changed by the user by selecting (i.e. long-pressing) the
+Some InfoBox values can be changed by the user by selecting (i.e.\ long-pressing) the
 InfoBox with the touch-screen or mouse.  This brings up a small tabular dialogue:
 
 \begin{description}
 \item[\bmenuw{Edit}]  
-  Allows the pilot to adjust the InfoBox setting (e.g. raise or lower the 
+  Allows the pilot to adjust the InfoBox setting (e.g.\ raise or lower the
   MacCready setting)
 
 \item[\bmenuw{Setup}]
   Allows you to change the behaviour of the setting related to the InfoBox 
   (for example, changing from auto to manual MacCready mode); or 
-  to change the InfoBox itself by pressing `{\it Switch InfoBox}', then 
+  to change the InfoBox itself by pressing `\emph{Switch InfoBox}', then 
   choosing from a list of all available InfoBoxes.
 
 \end{description}
@@ -594,8 +534,8 @@ be adjusted include MacCready setting, wind speed, and altitude (QNH).
 
 \subsection*{Changing InfoBox sets}
 
-An entire set of InfoBox can be composed by the `{\it Setup System}' configuration 
-dialogues on the `{\it Look / InfoBox Modes}' and `{\it Look / InfoBox Pages}' 
+An entire set of InfoBox can be composed by the `\emph{Setup System}' configuration 
+dialogues on the `\emph{Look / InfoBox Modes}' and `\emph{Look / InfoBox Pages}' 
 \ref{sec:infobox_sets} setup page. 
 The dialogues give a wide variety to set up the look and feel of the XCSoar pages.  
 
@@ -606,7 +546,7 @@ Status messages appear over the map area to present text for a short period of
 time.  The message disappears after the time period has elapsed, and different
 types of message have different periods. Additionally, status messages can be
 made to disappear by acknowledging the message.  Acknowledgement is achieved by
-either pressing the enter key (rotary knob on Altair), touching the status
+either pressing the enter key, touching the status
 message (on touch-screen devices) or clicking the screen (mouse enabled devices).
 
 Additional user buttons may be assigned to a status message repeat function,
@@ -635,7 +575,7 @@ Some dialogues simply display information, and require no user input. Other
 dialogues contain data fields that can be modified or buttons that can be pressed.  
 
 A cursor appears over the active button or data field. Pressing the up/down
-arrow keys (or rotating the outer knob on Altair), the cursor will cycle
+arrow keys, the cursor will cycle
 through the next or previous items. For list items and scrollable text, the
 up/down arrow key moves the cursor up or down the list or text, and the
 left/right arrow keys move the cursor up or down by one page in long lists.
@@ -644,10 +584,9 @@ For PDAs and PC versions, list items can be selected by touching the item (or
 left-clicking with the mouse). Once a list item is selected, another touch
 (left click) is equivalent to pressing the enter key.
 
-Pressing the right/left arrow keys (or rotating the inner knob on Altair), the
-data field value under the cursor can be modified. Pressing the enter key (or
-pressing the rotary knob on Altair) activates the button or makes a selection
-from a list.
+Pressing the right/left arrow keys, the data field value under the
+cursor can be modified. Pressing the enter key activates the button or
+makes a selection from a list.
 
 Dialogues are typically started from the button menu.  
 
@@ -656,8 +595,7 @@ in a consistent fashion. Press the \bmenuw{$<$} or \bmenuw{$>$} buttons to
 select the next or previous page of the dialogue and the \bmenuw{Close} button 
 to make the dialogue disappear.
 
-The escape key on a PC or the PWR/ESC button on Altair, can also be used to
-close dialogues.
+The escape key on a PC can also be used to close dialogues.
 
 The user must close the dialogue to return to the map view. When a dialogue
 has been opened, the main button menu is disabled until the dialogue is closed.
@@ -683,7 +621,7 @@ configured
 of each airspace class
 \item[Team code] Allows transfer of coordinates between FLARM team mates via a 
   code
-\item[Devices]  Selection of various external devices (e.g. smart variometers, 
+\item[Devices]  Selection of various external devices (e.g.\ smart variometers,
   FLARM, etc.).
 \item[Setup Plane]  Easy reconfiguration of the plane-dependent settings (e.g. 
   polar, competition ID, etc.) by choosing from a list of previously-created 
@@ -702,11 +640,12 @@ Typically this is used for check-lists. It can be accessed via the menu.
 \bmenut{Info}{1/3}\blink\bmenut{Check}{List}
 \sketch{figures/checklist.png}
 
-These check-lists may include: daily inspection, preflight, out-landing,
-pre-landing, radio procedures, and aircraft rigging and de-rigging
-instructions.  Since the check-lists may be long, the up/down keys (or rotary
-knob on Altair) may be used to scroll through the text. Clicking the
-\bmenuw{$<$} and \bmenuw{$>$} buttons selects the previous/next checklist.
+These check-lists may include: daily inspection, preflight,
+out-landing, pre-landing, radio procedures, and aircraft rigging and
+de-rigging instructions.  Since the check-lists may be long, the
+up/down keys may be used to scroll through the text. Clicking the
+\bmenuw{$<$} and \bmenuw{$>$} buttons selects the previous/next
+checklist.
 
 
 \subsection*{Text entry} \label{sec:textentry}
@@ -723,12 +662,12 @@ character under the cursor (underlined character). Clicking the \button{$<$}
 and \button{$>$} buttons move the cursor left/right.  
 
 To enter text with the touch screen keyboard, press the letters of choice 
-one after the other. In some dialogues (e.g. waypoint editing) only the next 
+one after the other. In some dialogues (e.g.\ waypoint editing) only the next
 \sketch{figures/textentry_keyboard.png}
 letters matching to an entry in the database will be shown. For deleting the 
 last letter use the \button{$<-$} button. The \button{Clear} button deletes all input.
 
-Press \button{Ok} to take over, or \button{Cancel} to exit.
+Press \button{Ok} to validate, or \button{Cancel} to exit.
 
 
 \section{Acoustic alert and sound feedback}
@@ -758,23 +697,11 @@ Certain aspects of the look of items on the screen can be adjusted.
 The most noticeable of these is whether to display InfoBoxes and
 gauges in white on black (called inverse colours) or black on white.
 
-For Altair the control of the screen hardware 
-\sketch{figures/brightness.png}
-brightness can be controlled from the brightness dialogue.
-\begin{quote}
-\bmenug{Display 2}\blink\bmenug{Bright}
-\end{quote}
-
-Refer to the {\em Altair User's Manual} for details of the brightness
-dialogue.
-
 
 \section{Help system}
 
-A help system now provides descriptive text for properties in
-most dialogues.  When a property is selected, for Altair, press and hold the
-enter button for two seconds, then release.  A window will open with
-help text describing the property.
+A help system provides descriptive text for properties in most
+dialogues.
 
 \section{Interfacing with gestures}\label{sec:gestures}
 As of version 6.0, XCSoar supports so-called `gestures'.
@@ -787,7 +714,7 @@ a certain function is activated. \sketch{figures/gesture1.png}
 A specific gesture is defined by movements of the finger or the 
 cursor in the four directions Up, Down, Left and Right. This means if 
 you drag your finger down and afterwards to the right over the screen, 
-\gesture{dr} the gesture "DR" is detected, which stands for "Down-Right". 
+\gesture{dr} the gesture ``DR'' is detected, which stands for ``Down-Right''.
 It will bring up the waypoint list. The manual indicates an available 
 gesture as shown here on the left side of the text body. Both the blue hand 
 and pictogram of the movement are used to indicate a specific gesture, in this 
