--- a/doc/manual/en/ch08_avionics_and_airframe.tex
+++ b/doc/manual/en/ch08_avionics_and_airframe.tex
@@ -18,7 +18,7 @@ and should contain a fuse and a manual isolation switch.
 
 The greatest cause of power drain by the PDA is the LCD back-light,
 however domestic PDAs are not particularly bright so they may need to
-have the back-light up full. However, for EFIS systems such as Altair,
+have the back-light up full. However, for EFIS systems,
 it is recommended to use the lowest back-light settings that are
 comfortable.
 
@@ -33,9 +33,6 @@ is issued by the system, the screen becomes activated.
 Another way to help conserve battery power is to reduce the
 computational load by turning off certain features.  Drawing terrain
 and long snail trails contribute significantly to the CPU load.
-
-For Altair/Vega systems, the external supply voltage is displayed on
-the system status dialogue (see Section~\ref{sec:system-status}).
 
 For other embedded platforms, a \infobox{Battery} InfoBox is available that 
 displays the available battery life remaining, as well as the charge state 
@@ -71,7 +68,7 @@ communication errors.
 
 XCSoar can handle multiple GPS sources and it uses them to provide redundancy.
 The sources are configured on the System Configuration screen, on the page 
-entitled "Devices".  Device A is the primary GPS data source and Device B is 
+entitled ``Devices''.  Device A is the primary GPS data source and Device B is
 the secondary source.
 
 During operation, if the primary GPS source drops out, XCSoar will use the GPS 
@@ -85,8 +82,8 @@ Some older GPS units (and some new ones) do not output altitude
 relative to mean sea level, rather they output elevation with respect
 to the WGS84 ellipsoid.  XCSoar detects when this occurs and applies
 the ellipsoid to geoid offset according to an internal tabulated data
-at two degree spacing.  This is not required for FLARM units or Altair
-Pro, which correctly output MSL altitude.
+at two degree spacing.  This is not required for FLARM units,
+which correctly output MSL altitude.
 
 \section{Switch inputs}
 
@@ -97,12 +94,9 @@ Several mechanisms are available for interfacing to switches and
 sensors:
 \begin{description}
 \item[Serial device]  Certain intelligent variometers such as
- triadis engineering's Vega have multiple airframe switches
+ Triadis Engineering's Vega have multiple airframe switches
  and pass this information on to the PDA or EFIS as special
  NMEA sentences.
-\item[1-Wire device]  triadis engineering's Altair glide computer
- and Vega variometer provide a 1-Wire peripheral bus to which
- various digital and analog sensors can be attached.
 \item[Bluetooth device]  Many Pocket PC devices support wireless
  connection to a Bluetooth Game-Pad device that has several buttons.
  This is more suited to user-interface input devices than airframe
@@ -146,14 +140,14 @@ inspection tests or before takeoff.
 \section{Slave mode}
 
 A device type in the configuration settings, ``NMEA Out'' is defined
-for use in joining two Altair or PDA systems in a master-slave mode.
+for use in joining two systems in a master-slave mode.
 In the master, the second com device can be set to NMEA Out, and all
 data received in the first com device (as well as outgoing data) will
 be sent to the slave.  
 
-As an example where two Altairs are being connected together, in the
-slave, the first com device can then be set to ``Vega'' or ``Altair
-Pro'' and this system receives all data as if it came from the
+As an example where two devices are being connected together, in the
+slave, the first com device can then be set to ``Vega'' 
+and this system receives all data as if it came from the
 Master's GPS and connected instruments (Vega, FLARM etc).
 
 
@@ -163,7 +157,7 @@ The system status dialogue is
 \menulabel{\bmenug{Info 2}\blink\bmenug{Status}}
 used primarily as a systems check, to see how the glide computer and the 
 connected devices are performing.  This is accessed via the menu 
-and then selecting the tabular {\bf System}.
+and then selecting the tabular \textbf{System}.
 \sketch{figures/status-system.png}
 
 All dynamic values (e.g.\ battery voltage, number of satellites in
@@ -191,7 +185,7 @@ traffic data.
 \section{Managing external devices}
 
 The device management dialogue can be accessed from the configuration
-\menulabel{\bmenug{Config 2}\blink\bmenug{Devices}}
+\menulabel{\bmenug{Config 1}\blink\bmenug{Devices}}
 menu. It shows a list of configured external devices,
 and it lists what information they provide.
 
@@ -201,7 +195,7 @@ device.  XCSoar reconnects to a failed device periodically, but
 sometimes, it might be desirable to trigger that manually.
 
 The button ``Flight download'' is only available with supported IGC
-loggers (see \ref{sec:supported-varios} for a list).  Upon clicking,
+loggers (see Section~\ref{sec:supported-varios} for a list).  Upon clicking,
 XCSoar retrieves a list of flights, and asks you to select one.  The
 IGC file will be downloaded to the ``\texttt{logs}'' directory inside
 \texttt{XCSoarData}.
